--- a/src/index.less
+++ b/src/index.less
@@ -4,6 +4,7 @@
 
 /* rich editor style */
 .layout {
+  position: relative;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -74,6 +75,105 @@
   span {
     padding: 5px;
     font: 15px/25px Arial, sans-serif;
+  }
+  .modalLayout {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    .content {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      justify-content: space-between;
+      position: relative;
+      top: 0;
+      left: -50%;
+      min-width: 400px;
+      min-height: 110px;
+      border: 1px solid @line-color;
+      background: #ffffff;
+      z-index: 9999;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      border-radius: 5px;
+      color: darken(@front-color, 20%);
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      .modalHeader {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px;
+        cursor: move;
+        .modalTitle {
+          font: bold 17px 'Microsoft YaHei', sans-serif;
+        }
+        .modalClose {
+          font: 17px 'Microsoft YaHei', sans-serif;
+          i {
+            transition: color 500ms;
+            cursor: pointer;
+          }
+          i:hover {
+            color: @selected-color;
+          }
+        }
+      }
+      .modalBody {
+        padding: 20px;
+        font: 15px 'Microsoft YaHei', sans-serif;
+      }
+      .modalFooter {
+        position: relative;
+        bottom: 0;
+        padding: 20px;
+        text-align: right;
+        .btnEnsure {
+          background: inherit;
+          padding: 0;
+          margin: 0 15px;
+          border: 1px solid @selected-color;
+          -webkit-border-radius: 5px;
+          -moz-border-radius: 5px;
+          border-radius: 5px;
+          color: @selected-color;
+          width: 80px;
+          height: 35px;
+          font: 15px/35px sans-serif;
+          outline: 0;
+          transition: all 500ms
+        }
+        .btnEnsure:hover {
+          -webkit-box-shadow: 0 0 5px @selected-color;
+          -moz-box-shadow: 0 0 5px @selected-color;
+          box-shadow: 0 0 5px @selected-color;
+        }
+        .btnEnsure:active {
+          color: #ffffff;
+          background: @selected-color;
+        }
+        .btnCancel {
+          background: inherit;
+          border: 1px solid #ffffff;
+          padding: 0;
+          color: @selected-color;
+          width: 80px;
+          height: 35px;
+          font: 15px/35px sans-serif;
+          outline: 0;
+          transition: all 500ms
+        }
+        .btnCancel:hover {
+          border: 1px solid @selected-color;
+          -webkit-border-radius: 5px;
+          -moz-border-radius: 5px;
+          border-radius: 5px;
+        }
+      }
+    }
   }
 }
 
