cf-rich-editor 2017/4/20 更新内容： 1、修改demo修复HMR不自动更新页面的bug 2、CustomFn/blockRenderFn.js： 块渲染模式方法，新增type判断，接收atomic中image,audio,video 3、Toolbar/AtomicLayoutCtrl.js: 工具栏：插入多媒体文件 4、Toolbar/LinkLayoutCtrl.js: 工具栏：插入链接 （1）插入链接确认按钮默认ensure()事件改为promise异步方法 （2）url链接网址有效性检测，使用promise，防止卡死状态 5、UI/InputLayout.js: 基础组件的ensure按钮改为异步promise，异常捕获也相应修改为promise().catch()形式

--- a/src/CustomFn/blockStyle.css
+++ b/src/CustomFn/blockStyle.css
@@ -10,7 +10,7 @@
     font-family: 'Inconsolata', 'Menlo', 'Consolas', monospace;
     font-size: 16px;
     padding: 5px;
-    margin: 5px;
+    margin: 10px 5px;
 }
 
 .public-DraftStyleDefault-pre {
