--- a/src/index.less
+++ b/src/index.less
@@ -32,9 +32,16 @@
   .body {
     padding: 8px 0;
     min-height: 250px;
-    font: 14px/25px 'Georgia', Arial, sans-serif;
+    font: 14px/30px 'Georgia', Arial, sans-serif;
     color: darken(@front-color, 50%);
     cursor: text;
+    h1, h2, h3, h4, h5 {
+      margin: 0.67em 0;
+    }
+    a {
+      color: blue;
+      text-decoration: underline;
+    }
   }
   .footer {
     height: auto;
