cf-rich-editor 2017/4/28 更新内容： 1、snifferApi 属性修改为 sniffer:{ check:true, url:'嗅探接口', param:'接收地址参数名称'} 2、重写draft.js的原始样式 3、bug修正：修改图片大小面板，长宽比例锁定更改会出现长宽文本框为空时无法更改 4、回归测试：修正：snifferApi 修改为 sniffer 所引起的bug 5、图片上传失败提醒

--- a/src/CustomFn/blockStyle.css
+++ b/src/CustomFn/blockStyle.css
@@ -13,6 +13,12 @@
     margin: 10px 5px;
 }
 
+.cf-richEditor-indent {
+    text-indent: 2em;
+}
+
+/*重写原始样式*/
+
 .public-DraftStyleDefault-pre {
     background-color: rgba(0, 0, 0, 0.05);
     padding: 15px;
@@ -22,6 +28,12 @@
     border-radius: 5px;
 }
 
-.cf-richEditor-indent {
-    text-indent: 2em;
+.public-DraftStyleDefault-ol {
+    margin: 0;
+    padding: 0;
+}
+
+.public-DraftStyleDefault-ul {
+    margin: 0;
+    padding: 0;
 }
